--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/site.png" />
+    <link rel="icon" href="data:image/svg+xml,
+    %3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E
+    %3Ctext y='0.9em' font-size='90'%3E☠️%3C/text%3E
+    %3C/svg%3E" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>죽음의 술게임 ❤️</title>
     <script async src="https://docs.opencv.org/master/opencv.js"></script>
